--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="kr.ac.konkuk.cookingmamma">
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-feature android:name="android.hardware.camera2" android:required="true"/>
+
 
     <application
         android:allowBackup="true"
@@ -23,11 +28,6 @@
             android:label="Mainmenu">
         </activity>
 
-        <activity
-            android:name=".login"
-            android:label=".login">
-
-        </activity>
 
         <activity
             android:name=".myPocket"
@@ -48,6 +48,17 @@
             android:name=".writeRecipe"
             android:label=".writeRecipe">
         </activity>
+
+        <provider
+            android:authorities="kr.ac.konkuk.cookingmamma.provider"
+            android:name="androidx.core.content.FileProvider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths"/>
+        </provider>
 
     </application>
 
